force-app/main/default/objects/Trecho__c/Trecho__c.object-meta.xml
<CustomObject>
    <description>Define um trecho com origem e destino dentro de um Voo</description>
    <label>Trecho</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Código do Trecho</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trechos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>