force-app/main/default/objects/Trecho__c/fields/AcionamentoDif__c.field-meta.xml
<CustomField>
    <fullName>AcionamentoDif__c</fullName>
    <description>Exibe os tempos de acionamento do voe omni e sig caso sejam diferentes</description>
    <formula>IF(AND(ISNULL(Ligado__c), ISNULL(AcionamentoSigPartida__c)), &apos;&apos;,
IF(OR(Ligado__c != AcionamentoSigPartida__c, ISNULL(Ligado__c), ISNULL(AcionamentoSigPartida__c)), 
			IF(ISNULL(Ligado__c), &apos;-&apos;,
			&apos;OMNI: &apos; &amp; RIGHT(LEFT(TEXT(Ligado__c),16),5) )
			&amp; &apos; / &apos; &amp; 
			IF(ISNULL(AcionamentoSigPartida__c), &apos;-&apos;,
			&apos;Sig: &apos; &amp;	RIGHT(LEFT(TEXT(AcionamentoSigPartida__c),16),5)), &apos;&apos;))</formula>
    <inlineHelpText>Exibe os tempos de acionamento do voe omni e sig caso sejam diferentes</inlineHelpText>
    <label>Acionamento Dif</label>
    <type>Text</type>
</CustomField>