force-app/main/default/objects/Trecho__c/fields/AcionamentoSigPartida__c.field-meta.xml
<CustomField>
    <fullName>AcionamentoSigPartida__c</fullName>
    <description>Campo Sig do momento do acionamento do voo.</description>
    <inlineHelpText>Campo Sig do momento do acionamento do voo.</inlineHelpText>
    <label>Acionamento Sig Partida</label>
    <type>DateTime</type>
</CustomField>