force-app/main/default/objects/Trecho__c/fields/AeronaveAbastecida__c.field-meta.xml
<CustomField>
    <fullName>AeronaveAbastecida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aeronave abastecida</label>
    <type>Checkbox</type>
</CustomField>