force-app/main/default/objects/Trecho__c/fields/AgendarAtraso__c.field-meta.xml
<CustomField>
    <fullName>AgendarAtraso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo auxiliar para lidar com a alteração de agendamento</description>
    <inlineHelpText>Campo auxiliar para lidar com a alteração de agendamento</inlineHelpText>
    <label>Agendar atraso</label>
    <type>Checkbox</type>
</CustomField>