force-app/main/default/objects/Trecho__c/fields/Atraso__c.field-meta.xml
<CustomField>
    <fullName>Atraso__c</fullName>
    <formula>IF(NOT(ISNULL(DataOriginalVoo__c)),
IF(PrimeiroTrechoFixo__c,
IF(TEXT(TipoAtrasoContrato__c) = &apos;&apos; || TEXT(TipoAtrasoContrato__c) = &apos;Decolagem&apos;,
(Decolagem__c - DataOriginalVoo__c)*24*60,
IF(ISNULL(Ligado__c),
(Decolagem__c - DataOriginalVoo__c)*24*60,
(Ligado__c - DataOriginalVoo__c)*24*60)),(Decolagem__c - PrevisaoDecolagem__c)*24*60),(Decolagem__c - PrevisaoDecolagem__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atraso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>