force-app/main/default/objects/Trecho__c/fields/BasesRelatorio__c.field-meta.xml
<CustomField>
    <fullName>BasesRelatorio__c</fullName>
    <formula>IF (OrigemBase__c = TRUE, CodigoOrigem__c, 
				IF ( DestinoBase__c = TRUE,  CodigoDestino__c, &apos;&apos;)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bases para Relatório</label>
    <type>Text</type>
</CustomField>