force-app/main/default/objects/Trecho__c/fields/BriefingFinalizado__c.field-meta.xml
<CustomField>
    <fullName>BriefingFinalizado__c</fullName>
    <label>Último Briefing</label>
    <summarizedField>Passageiro__c.DataBriefing__c</summarizedField>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>