force-app/main/default/objects/Trecho__c/fields/BriefingIniciado__c.field-meta.xml
<CustomField>
    <fullName>BriefingIniciado__c</fullName>
    <label>Primeiro Briefing</label>
    <summarizedField>Passageiro__c.DataBriefing__c</summarizedField>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>