force-app/main/default/objects/Trecho__c/fields/BriefingOK__c.field-meta.xml
<CustomField>
    <fullName>BriefingOK__c</fullName>
    <formula>AND((BriefingOnline__c + BriefingPresencial__c)
                                == QtdCheckIn__c,
QtdCheckIn__c &gt; 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BriefingOK</label>
    <type>Checkbox</type>
</CustomField>