force-app/main/default/objects/Trecho__c/fields/ChaveUnicaOrdemExecucao__c.field-meta.xml
<CustomField>
    <fullName>ChaveUnicaOrdemExecucao__c</fullName>
    <description>Impede que a mesma ordem seja cadastrada para mais de um trecho</description>
    <label>Chave unica ordem de execução</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>