force-app/main/default/objects/Trecho__c/fields/CheckinAberto__c.field-meta.xml
<CustomField>
    <fullName>CheckinAberto__c</fullName>
    <label>Checkin aberto</label>
    <type>DateTime</type>
</CustomField>