force-app/main/default/objects/Trecho__c/fields/CheckinFinalizado__c.field-meta.xml
<CustomField>
    <fullName>CheckinFinalizado__c</fullName>
    <label>Checkin Finalizado</label>
    <type>DateTime</type>
</CustomField>