force-app/main/default/objects/Trecho__c/fields/CodigoDestino__c.field-meta.xml
<CustomField>
    <fullName>CodigoDestino__c</fullName>
    <formula>Destino__r.CodigoLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Destino</label>
    <type>Text</type>
</CustomField>