force-app/main/default/objects/Trecho__c/fields/CodigoOrigem__c.field-meta.xml
<CustomField>
    <fullName>CodigoOrigem__c</fullName>
    <description>Replica o código do local</description>
    <formula>Origem__r.CodigoLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica o código do local</inlineHelpText>
    <label>Código Origem</label>
    <type>Text</type>
</CustomField>