force-app/main/default/objects/Trecho__c/fields/CombustivelFinal__c.field-meta.xml
<CustomField>
    <fullName>CombustivelFinal__c</fullName>
    <label>Combustível Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>