force-app/main/default/objects/Trecho__c/fields/CombustivelInicial__c.field-meta.xml
<CustomField>
    <fullName>CombustivelInicial__c</fullName>
    <label>Combustível Inicial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>