force-app/main/default/objects/Trecho__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <description>Campo do Star</description>
    <label>Comentários</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>