force-app/main/default/objects/Trecho__c/fields/ConciliadoSIG__c.field-meta.xml
<CustomField>
    <fullName>ConciliadoSIG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que indica se o campo foi atualizado com valores do SIG Trip.</description>
    <inlineHelpText>Flag que indica se o campo foi atualizado com valores do SIG Trip.</inlineHelpText>
    <label>Conciliado SIG</label>
    <type>Checkbox</type>
</CustomField>