force-app/main/default/objects/Trecho__c/fields/Consumo__c.field-meta.xml
<CustomField>
    <fullName>Consumo__c</fullName>
    <formula>CombustivelInicial__c -  CombustivelFinal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>