force-app/main/default/objects/Trecho__c/fields/CoordenadasAlteradas__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasAlteradas__c</fullName>
    <formula>OR(
				CoordenadasOrigemAlteracao__c,
				CoordenadasDestinoAlteracao__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordenadas Alteradas</label>
    <type>Checkbox</type>
</CustomField>