force-app/main/default/objects/Trecho__c/fields/CoordenadasDestinoAlteracao__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasDestinoAlteracao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para controlar quando uma solicitação de alteração de coordenadas for feita</description>
    <inlineHelpText>Campo utilizado para controlar quando uma solicitação de alteração de coordenadas for feita</inlineHelpText>
    <label>Coordenadas Destino - Alteração</label>
    <type>Checkbox</type>
</CustomField>