force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeDestinoDecimal__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeDestinoDecimal__c</fullName>
    <formula>IF(
				CoordenadasDestinoAlteracao__c,
				IF(
								ISPICKVAL(CoordenadasLatitudeDestinoDirecao__c, &apos;S&apos;),
								-1 * (CoordenadasLatitudeDestinoGraus__c + ((CoordenadasLatitudeDestinoMinutos__c / 60) + (CoordenadasLatitudeDestinoSegundos__c / 3600))),
								(CoordenadasLatitudeDestinoGraus__c + ((CoordenadasLatitudeDestinoMinutos__c / 60) + (CoordenadasLatitudeDestinoSegundos__c / 3600)))
				),
				Destino__r.Coordenadas__Latitude__s 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordenadas Latitude Destino - Decimal</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>