force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeDestinoGraus__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeDestinoGraus__c</fullName>
    <description>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordenadas</description>
    <inlineHelpText>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordenadas</inlineHelpText>
    <label>Coordenadas Latitude Destino - Graus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>