force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeDestinoMinutos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeDestinoMinutos__c</fullName>
    <description>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordenadas</description>
    <inlineHelpText>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordenadas</inlineHelpText>
    <label>Coordenadas Latitude Destino - Minutos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>