force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeDestinoSegundos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeDestinoSegundos__c</fullName>
    <description>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordenadas</description>
    <inlineHelpText>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordenadas</inlineHelpText>
    <label>Coordenadas Latitude Destino - Segundos</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>