force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeOrigemDecimal__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeOrigemDecimal__c</fullName>
    <formula>IF(
				CoordenadasOrigemAlteracao__c,
				IF(
								ISPICKVAL(CoordenadasLatitudeOrigemDirecao__c, &apos;S&apos;),
								-1 * (CoordenadasLatitudeOrigemGraus__c + ((CoordenadasLatitudeOrigemMinutos__c / 60) + (CoordenadasLatitudeOrigemSegundos__c / 3600))),
								(CoordenadasLatitudeOrigemGraus__c + ((CoordenadasLatitudeOrigemMinutos__c / 60) + (CoordenadasLatitudeOrigemSegundos__c / 3600)))
				), 
			 Origem__r.Coordenadas__Latitude__s 	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordenadas Latitude Origem - Decimal</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>