force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeOrigemDirecao__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeOrigemDirecao__c</fullName>
    <label>Coordenadas Latitude Origem - Direção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DirecaoLatitude</valueSetName>
    </valueSet>
</CustomField>