force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeOrigemGraus__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeOrigemGraus__c</fullName>
    <description>Caso esse campo esteja preenchido, signifca que o cliente solicitou mudança de coordenadas</description>
    <inlineHelpText>Caso esse campo esteja preenchido, signifca que o cliente solicitou mudança de coordenadas</inlineHelpText>
    <label>Coordenadas Latitude Origem - Graus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>