force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeOrigemMinutos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeOrigemMinutos__c</fullName>
    <description>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordendas</description>
    <inlineHelpText>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordendas</inlineHelpText>
    <label>Coordenadas Latitude Origem - Minutos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>