force-app/main/default/objects/Trecho__c/fields/CoordenadasLatitudeOrigemSegundos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeOrigemSegundos__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordendas</description>
    <inlineHelpText>Caso esse campo esteja preenchido, significa que o cliente solicitou alteração de coordendas</inlineHelpText>
    <label>Coordenadas Latitude Origem - Segundos</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>