force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeDestinoDecimal__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeDestinoDecimal__c</fullName>
    <formula>IF(
				CoordenadasDestinoAlteracao__c,
				IF( 
								ISPICKVAL(CoordenadasLongitudeDestinoDirecao__c, &apos;O&apos;),
								-1 * (CoordenadasLongitudeDestinoGraus__c + ((CoordenadasLongitudeDestinoMinutos__c / 60) + (CoordenadasLongitudeDestinoSegundos__c / 3600))),
								(CoordenadasLongitudeDestinoGraus__c + ((CoordenadasLongitudeDestinoMinutos__c / 60) + (CoordenadasLongitudeDestinoSegundos__c / 3600)))
				),
			 Destino__r.Coordenadas__Longitude__s 	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordenadas Longitude Destino - Decimal</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>