force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeDestinoGraus__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeDestinoGraus__c</fullName>
    <label>Coordenadas Longitude Destino - Graus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>