force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeDestinoMinutos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeDestinoMinutos__c</fullName>
    <label>Coordenadas Longitude Destino - Minutos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>