force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeDestinoSegundos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeDestinoSegundos__c</fullName>
    <label>Coordenadas Longitude Destino - Segundos</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>