force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeOrigemDecimal__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeOrigemDecimal__c</fullName>
    <formula>IF(
				CoordenadasOrigemAlteracao__c,
				IF(
								ISPICKVAL(CoordenadasLongitudeOrigemDirecao__c, &apos;O&apos;),
								-1 * (CoordenadasLongitudeOrigemGraus__c + ((CoordenadasLongitudeOrigemMinutos__c / 60) + (CoordenadasLongitudeOrigemSegundos__c / 3600))),
								(CoordenadasLongitudeOrigemGraus__c + ((CoordenadasLongitudeOrigemMinutos__c / 60) + (CoordenadasLongitudeOrigemSegundos__c / 3600)))
				),
				Origem__r.Coordenadas__Longitude__s 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordenadas Longitude Origem - Decimal</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>