force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeOrigemDirecao__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeOrigemDirecao__c</fullName>
    <label>Coordenadas Longitude Origem - Direção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DirecaoLongitude</valueSetName>
    </valueSet>
</CustomField>