force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeOrigemGraus__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeOrigemGraus__c</fullName>
    <label>Coordenadas Longitude Origem - Graus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>