force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeOrigemMinutos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeOrigemMinutos__c</fullName>
    <label>Coordenadas Longitude Origem - Minutos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>