force-app/main/default/objects/Trecho__c/fields/CoordenadasLongitudeOrigemSegundos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeOrigemSegundos__c</fullName>
    <label>Coordenadas Longitude Origem - Segundos</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>