force-app/main/default/objects/Trecho__c/fields/CoordenadasOrigemUtilizada__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasOrigemUtilizada__c</fullName>
    <formula>&quot;latitude: &quot; &amp; 
IF(CoordenadasOrigemAlteracao__c, TEXT(CoordenadasLatitudeOrigemDecimal__c), TEXT(Origem__r.Coordenadas__Latitude__s)) &amp;
&quot; longitude: &quot; &amp; IF(CoordenadasOrigemAlteracao__c, TEXT(CoordenadasLongitudeOrigemDecimal__c), TEXT(Origem__r.Coordenadas__Longitude__s))</formula>
    <label>Coordenadas Origem - Utilizada</label>
    <type>Text</type>
</CustomField>