force-app/main/default/objects/Trecho__c/fields/CorEtiqueta__c.field-meta.xml
<CustomField>
    <fullName>CorEtiqueta__c</fullName>
    <label>Etiqueta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amarela</fullName>
            </value>
            <value>
                <fullName>Preta</fullName>
            </value>
            <value>
                <fullName>Verde</fullName>
            </value>
            <value>
                <fullName>Vermelha</fullName>
            </value>
            <value>
                <fullName>Lilás</fullName>
            </value>
            <value>
                <fullName>Rosa</fullName>
            </value>
            <value>
                <fullName>Marrom</fullName>
            </value>
            <value>
                <fullName>Azul claro</fullName>
            </value>
            <value>
                <fullName>Cinza</fullName>
            </value>
            <value>
                <fullName>Laranja</fullName>
            </value>
            <value>
                <fullName>Azul escuro</fullName>
            </value>
            <value>
                <fullName>Branca</fullName>
            </value>
            <value>
                <fullName>Verde escura</fullName>
            </value>
            <value>
                <fullName>Mostarda</fullName>
            </value>
            <value>
                <fullName>Bordô</fullName>
            </value>
            <value>
                <fullName>Nenhuma</fullName>
                <isActive>false</isActive>
                <label>Nenhuma</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>