force-app/main/default/objects/Trecho__c/fields/CorteDif__c.field-meta.xml
<CustomField>
    <fullName>CorteDif__c</fullName>
    <description>Exibe os tempos de corte do voe omni e sig caso sejam diferentes</description>
    <formula>IF(AND(ISNULL(Cut__c), ISNULL(CutSigDesligamento__c)), &apos;&apos;,
IF(OR(Cut__c != CutSigDesligamento__c, ISNULL(Cut__c), ISNULL(CutSigDesligamento__c)), 
			IF(ISNULL(Cut__c), &apos;-&apos;,
			&apos;OMNI: &apos; &amp; RIGHT(LEFT(TEXT(Cut__c),16),5))
			&amp; &apos; / &apos; &amp;
			IF(ISNULL(CutSigDesligamento__c), &apos;-&apos;,
			&apos;Sig: &apos; &amp; RIGHT(LEFT(TEXT(CutSigDesligamento__c),16),5)), &apos;&apos;))</formula>
    <inlineHelpText>Exibe os tempos de corte do voe omni e sig caso sejam diferentes</inlineHelpText>
    <label>Corte Dif</label>
    <type>Text</type>
</CustomField>