force-app/main/default/objects/Trecho__c/fields/Cut__c.field-meta.xml
<CustomField>
    <fullName>Cut__c</fullName>
    <description>Campo oculto para entrada da data e hora do final do trecho</description>
    <label>Corte</label>
    <type>DateTime</type>
</CustomField>