force-app/main/default/objects/Trecho__c/fields/CutBackup__c.field-meta.xml
<CustomField>
    <fullName>CutBackup__c</fullName>
    <description>Campo backup para ser armazenado o valor anterior do Campo Corte.</description>
    <inlineHelpText>Campo backup para ser armazenado o valor anterior do Campo Corte.</inlineHelpText>
    <label>Corte Original</label>
    <type>DateTime</type>
</CustomField>