force-app/main/default/objects/Trecho__c/fields/CutOriginal__c.field-meta.xml
<CustomField>
    <fullName>CutOriginal__c</fullName>
    <label>Corte original</label>
    <type>DateTime</type>
</CustomField>