force-app/main/default/objects/Trecho__c/fields/CutSigDesligamento__c.field-meta.xml
<CustomField>
    <fullName>CutSigDesligamento__c</fullName>
    <description>Campo Sig do momento do corte do voo.</description>
    <inlineHelpText>Campo Sig do momento do corte do voo.</inlineHelpText>
    <label>Corte Sig Desligamento</label>
    <type>DateTime</type>
</CustomField>