force-app/main/default/objects/Trecho__c/fields/DataAtrasoDecolagem__c.field-meta.xml
<CustomField>
    <fullName>DataAtrasoDecolagem__c</fullName>
    <description>Momento em que o trecho é considerado atrasado.</description>
    <formula>PrevisaoDecolagem__c + ($Setup.ConfiguracaoTempo__c.TempoMaximoAtrasoTrecho__c )/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Momento em que o trecho é considerado atrasado.</inlineHelpText>
    <label>Data de atraso da decolagem</label>
    <type>DateTime</type>
</CustomField>