force-app/main/default/objects/Trecho__c/fields/DataAtualizacaoAtraso__c.field-meta.xml
<CustomField>
    <fullName>DataAtualizacaoAtraso__c</fullName>
    <description>Data de atualização do campo de atraso.</description>
    <formula>PrevisaoDecolagem__c + (60 + $Setup.ConfiguracaoTempo__c.TempoMaximoAtrasoTrecho__c )/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data de atualização do campo de atraso.</inlineHelpText>
    <label>Data de atualização atraso</label>
    <type>DateTime</type>
</CustomField>