force-app/main/default/objects/Trecho__c/fields/DataOriginalVoo__c.field-meta.xml
<CustomField>
    <fullName>DataOriginalVoo__c</fullName>
    <label>Data Original do Voo</label>
    <type>DateTime</type>
</CustomField>