force-app/main/default/objects/Trecho__c/fields/Decolagem__c.field-meta.xml
<CustomField>
    <fullName>Decolagem__c</fullName>
    <label>Decolagem</label>
    <type>DateTime</type>
</CustomField>