force-app/main/default/objects/Trecho__c/fields/DecolagemBackup__c.field-meta.xml
<CustomField>
    <fullName>DecolagemBackup__c</fullName>
    <description>Campo backup para ser armazenado o valor anterior do Campo Decolagem.</description>
    <inlineHelpText>Campo backup para ser armazenado o valor anterior do Campo Decolagem.</inlineHelpText>
    <label>Decolagem Original</label>
    <type>DateTime</type>
</CustomField>