force-app/main/default/objects/Trecho__c/fields/DecolagemDif__c.field-meta.xml
<CustomField>
    <fullName>DecolagemDif__c</fullName>
    <description>Exibe os tempos de decolagem do voe omni e sig caso sejam diferentes</description>
    <formula>IF(AND(ISNULL(Decolagem__c), ISNULL(DecolagemSig__c)), &apos;&apos;,
IF(OR(Decolagem__c != DecolagemSig__c, ISNULL(Decolagem__c), ISNULL(DecolagemSig__c)), 
			IF(ISNULL(Decolagem__c), &apos;-&apos;,
			&apos;OMNI: &apos; &amp; RIGHT(LEFT(TEXT(Decolagem__c),16),5))
			&amp; &apos; / &apos; &amp;
			IF(ISNULL(DecolagemSig__c), &apos;-&apos;,
			&apos;Sig: &apos; &amp; RIGHT(LEFT(TEXT(DecolagemSig__c),16),5)), &apos;&apos;))</formula>
    <inlineHelpText>Exibe os tempos de decolagem do voe omni e sig caso sejam diferentes</inlineHelpText>
    <label>Decolagem Dif</label>
    <type>Text</type>
</CustomField>