force-app/main/default/objects/Trecho__c/fields/DecolagemOriginal__c.field-meta.xml
<CustomField>
    <fullName>DecolagemOriginal__c</fullName>
    <label>Decolagem original</label>
    <type>DateTime</type>
</CustomField>