force-app/main/default/objects/Trecho__c/fields/DecolagemSig__c.field-meta.xml
<CustomField>
    <fullName>DecolagemSig__c</fullName>
    <description>Campo Sig do momento da decolagem do voo.</description>
    <inlineHelpText>Campo Sig do momento da decolagem do voo.</inlineHelpText>
    <label>Decolagem Sig</label>
    <type>DateTime</type>
</CustomField>