force-app/main/default/objects/Trecho__c/fields/DescontarTrecho__c.field-meta.xml
<CustomField>
    <fullName>DescontarTrecho__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso marcado trecho não será contabilizado</description>
    <inlineHelpText>Caso marcado trecho não será contabilizado</inlineHelpText>
    <label>Descontar trecho</label>
    <type>Checkbox</type>
</CustomField>