force-app/main/default/objects/Trecho__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Local de destino do trecho</description>
    <inlineHelpText>Local de destino do trecho</inlineHelpText>
    <label>Destino</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Trechos (Destino)</relationshipLabel>
    <relationshipName>TrechosDestino</relationshipName>
    <type>Lookup</type>
</CustomField>