force-app/main/default/objects/Trecho__c/fields/DestinoBase__c.field-meta.xml
<CustomField>
    <fullName>DestinoBase__c</fullName>
    <description>Replica se o destino é base Omni</description>
    <formula>Destino__r.Base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica se o destino é base Omni</inlineHelpText>
    <label>Destino É Base</label>
    <type>Checkbox</type>
</CustomField>