force-app/main/default/objects/Trecho__c/fields/DestinoTexto__c.field-meta.xml
<CustomField>
    <fullName>DestinoTexto__c</fullName>
    <description>Concatena Código de Local e seu nome</description>
    <formula>Destino__r.CodigoLocal__c &amp; &apos; - &apos; &amp;  Destino__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destino</label>
    <type>Text</type>
</CustomField>