force-app/main/default/objects/Trecho__c/fields/DisparaNotificacao__c.field-meta.xml
<CustomField>
    <fullName>DisparaNotificacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispara Notificação Origem</label>
    <type>Checkbox</type>
</CustomField>