force-app/main/default/objects/Trecho__c/fields/DisparaNotificacaoDestino__c.field-meta.xml
<CustomField>
    <fullName>DisparaNotificacaoDestino__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag para Disparar notificação quando destino do último trecho não for base</description>
    <inlineHelpText>Flag para Disparar notificação quando destino do último trecho não for base</inlineHelpText>
    <label>Dispara Notificação Destino</label>
    <type>Checkbox</type>
</CustomField>