force-app/main/default/objects/Trecho__c/fields/DisponibilidadePeso__c.field-meta.xml
<CustomField>
    <fullName>DisponibilidadePeso__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Disponibilidade de peso calculado pelo Cálculo de Missão Result</description>
    <inlineHelpText>Disponibilidade de peso calculado pelo Cálculo de Missão Result</inlineHelpText>
    <label>Disponibilidade de Peso</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>