force-app/main/default/objects/Trecho__c/fields/DistanciaNm__c.field-meta.xml
<CustomField>
    <fullName>DistanciaNm__c</fullName>
    <formula>IF(ISBLANK(Origem__c) || ISBLANK(Destino__c), 0, DISTANCE(Origem__r.Coordenadas__c , Destino__r.Coordenadas__c, &apos;km&apos;))/1.852</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distância (nm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>