force-app/main/default/objects/Trecho__c/fields/EmbarqueOK__c.field-meta.xml
<CustomField>
    <fullName>EmbarqueOK__c</fullName>
    <formula>TEXT(StatusAtendimento__c)== &apos;Passageiros Embarcados&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmbarqueOK</label>
    <type>Checkbox</type>
</CustomField>