force-app/main/default/objects/Trecho__c/fields/FimMissao__c.field-meta.xml
<CustomField>
    <fullName>FimMissao__c</fullName>
    <description>Campo utilizado para receber o fim da missão pelo skytrac</description>
    <inlineHelpText>Campo utilizado para receber o fim da missão pelo skytrac</inlineHelpText>
    <label>Fim da Missão</label>
    <type>DateTime</type>
</CustomField>